# azure-iot-sdk-c

./: build.sh
custom_hsm_lib/: CMakeLists.txt
custom_hsm_lib/src/: custom_hsm_lib.c
iothub_client/tests/common_ds_e2e/: iothubclient_common_ds_e2e.c
iothub_client/tests/iothubclient_mqtt_ds_e2e/: iothubclient_mqtt_ds_e2e.c
provisioning_client/samples/prov_dev_client_sample/: prov_dev_client_sample.c
